# dotfiles

./: .bazelrc  .chezmoiignore  .chezmoiroot  .claude  .cursor  .editorconfig  .example.local.bazelrc  .gitattributes  .gitignore  .goosehints  .local.bazelrc  .mise.toml  .pre-commit-config.yaml  20250829-json-merge-rule.md  AGENTS.md  BUILD.bazel  CLAUDE.md  GEMINI.md  JQ_INTERACTIVE_GUIDE.md  MODULE.bazel  Makefile  README.adoc  README.md  WORKSPACE  build.gradle.kts  chezmoi.toml  chezmoi_version.bzl  compile_commands.json  dotfiles.conf  fix.py  fix_env_setup_4.py  fix_lock.py  fix_pyright.py  fix_review_issues.py  fix_ruff.py  fix_tests.py  fix_tests10.py  fix_tests11.py  fix_tests2.py  fix_tests3.py  (+74 more)
.agents/: .gitignore  AGENTS.md  BUILD.bazel  jq.md
.agents/claude/: BUILD.bazel  CLAUDE.md  claude-settings-schema.json  claude_hooks.json
.agents/goose/: .goosehints
.agents/jules/: configuration_snapshot.sh  env_setup.sh
.agents/scratch_zone/: 2025-09-04-chezmoi-integration-plan.md  README.md
.claude/: .gitignore  BUILD.bazel  claude-settings-schema.json  claude_hooks.json  settings.json
.claude/hooks/: bazel-validate.sh  git-commit-main-guard.py  git-push-origin-main-guard.py  worktree-context.py  worktree-context.sh
.claude/rules/: 01-agents-md.md  02-no-auto-commit.md  10-technical-writing.md  11-write-agent-context.md  no-auto-commit.md
config/: BUILD.bazel  settings.bzl
hammerspoon/: BUILD.bazel
modules/bat/: BUILD.bazel  bat_rules.bzl
modules/docker/: BUILD.bazel  docker_rules.bzl
modules/fzf/: BUILD.bazel  fzf_rules.bzl
modules/git/: BUILD.bazel  README.adoc  git_rules.bzl  gitignore_global
modules/iterm2/: BUILD.bazel  iterm2_rules.bzl
modules/jq/: BUILD.bazel  README.adoc.tpl  jq_rules.bzl
modules/neovim/: BUILD.bazel  README.adoc  init.lua  init.lua.template  init.vim  init.vim.template  neovim_rules.bzl
modules/nvm/: BUILD.bazel  nvm_rules.bzl
modules/pyenv/: BUILD.bazel  pyenv_rules.bzl
modules/rectangle/: BUILD.bazel  rectangle_rules.bzl
modules/ripgrep/: BUILD.bazel  ripgrep_rules.bzl
modules/ssh/: BUILD.bazel  BUILD.test.bazel  README.adoc  ssh_config_test.bzl  ssh_rules.bzl
modules/tmux/: BUILD.bazel  README.adoc  testing.adoc  tmux.bzl  tmux.conf.template
modules/toolchains/: BUILD.bazel  README.adoc  brew_toolchain.bzl  jq_toolchain.bzl  module_extension.bzl  neovim_toolchain.bzl  register.bzl  tmux_toolchain.bzl  tool_tester.bzl  toolchain_defns.bzl  toolchain_types.bzl  toolchain_utils.bzl  toolchains.bzl  vim_toolchain.bzl
modules/vim/: BUILD.bazel  README.adoc  validation.bzl  vim_rules.bzl  vimrc.template
modules/vscode/: BUILD.bazel  README.adoc  settings.json.template  vscode_rules.bzl
rules/: BUILD.bazel  always_pass_test.sh  guarded_install.bzl  include_install.bzl  linting.bzl  lsp.bzl  mypy_test.py  mypy_wrapper.py  per_target_python.bzl  python_aspects.bzl  python_check_wrapper.sh  python_tooling.bzl  python_tools.bzl  python_wrappers.py  ruff_check_test.py  ruff_format_test.py  ruff_wrapper.py  simple_per_target_python.bzl  simple_python_tools.bzl  simple_shell_test.sh  validation.bzl
rules/chezmoi/: BUILD.bazel  defs.bzl
rules/common/: BUILD.bazel  config_generator.py  guarded_install.bzl  guarded_install_template.sh  include_install.bzl  include_install_template.sh  rule_utils.bzl  rule_utils_py.bzl
rules/git/: defs.bzl
rules/hammerspoon/: BUILD.bazel  defs.bzl
rules/json_merge/: BUILD.bazel  add_tools.jsonpatch  defs.bzl  json_merge_tool.py
rules/tmux/: BUILD.bazel  defs.bzl
rules/vim/: BUILD.bazel  defs.bzl
rules/zsh/: defs.bzl
selectors/: BUILD.bazel  package.bzl
src/: .chezmoi.toml  .chezmoi.toml.tmpl  .chezmoidata.toml  .chezmoiexternal.toml.tmpl  .chezmoiignore  .chezmoiremove  BUILD.bazel  CLAUDE.md  dot_inputrc  dot_tool-versions  modify_dot_gitconfig.tmpl  modify_dot_tmux.conf.tmpl  modify_dot_vimrc.tmpl  modify_dot_zshrc.tmpl  run_once_configure-asdf.sh.tmpl  run_once_install-asdf.sh.tmpl  run_once_install-claude.sh.tmpl  run_once_install-pnpm.sh.tmpl
src/.chezmoidata/: asdf.toml  bat.toml  bun.toml  claude_code.toml  eza.toml  fzf.toml  fzf_plugins.toml  fzf_plugins_data.toml  gh.toml  ghostty.toml  hammerspoon.toml  mise.toml  pnpm.toml  ripgrep.toml  tmux-powerline.toml  uv.toml
src/.chezmoiexternals/: BUILD.bazel  fzf-plugins.toml.tmpl  tmux-powerline.toml.tmpl
src/.chezmoiscripts/: run_after_install-zsh-set-default.sh.tmpl  run_every_after_install-zsh-set-default.sh.tmpl  run_once_configure-iterm2-bell.sh.tmpl  run_once_install-bat.sh.tmpl  run_once_install-bazelisk.sh.tmpl  run_once_install-eza.sh.tmpl  run_once_install-fzf.sh.tmpl  run_once_install-ghostty.sh.tmpl  run_once_install-hammerspoon.sh.tmpl  run_once_install-jq.sh.tmpl  run_once_install-ripgrep.sh.tmpl  run_once_install-zoxide.sh.tmpl  run_once_install-zsh.sh.tmpl  run_once_uninstall-ghostty.sh.tmpl
src/agents/: BUILD.bazel  manifest.toml
src/ai/: AGENTS.md  README.md
src/chezmoi/: .chezmoi.toml  .chezmoi.toml.tmpl  .chezmoiexternal.toml.tmpl  .chezmoiignore  .chezmoiignore.tmpl  .chezmoiremove  AGENTS.md  BUILD.bazel  dot_Brewfile.tmpl  dot_bunfig.toml.tmpl  dot_claude.json.tmpl  dot_cursorrules  dot_npmrc.tmpl  dot_rgignore  modify_dot_bash_profile.tmpl  modify_dot_bashrc.tmpl  modify_dot_claude.json.tmpl  modify_dot_gitconfig.tmpl  modify_dot_tmux.conf.tmpl  modify_dot_vimrc.tmpl  modify_dot_zprofile.tmpl  modify_dot_zshrc.tmpl  modify_{{ .terminal_settings_path }}.tmpl  run_once_10_install-mise-tools.sh.tmpl  run_once_configure-asdf.sh.tmpl  run_once_install-claude.sh.tmpl  run_once_install-gemini-extensions.sh.tmpl  run_onchange_after_windows_terminal_settings.sh.tmpl  run_onchange_after_wslconf.sh.tmpl  run_onchange_after_wslconfig.sh.tmpl
src/docs/: asdf.md  claude-code.md  claude-md-protocol.md  eza.md  hammerspoon.md  jq.md  mise.md  oh-my-zsh.md  powerlevel10k.md  rectangle-pro.md  shell.md  tmux.md
src/dot_claude/: CLAUDE.md  settings.json.tmpl
src/dot_jq/: obj2csv.jq
src/git/: .editorconfig  BUILD.bazel  (+1 more)
toolchains/: BUILD.bazel
variants/: BUILD.bazel
zsh/: zshrc  (+7 more)
(+1723 files in other folders)
