load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("//tools:linting.bzl", "bazel_files_format", "bazel_files_format_test")

package(default_visibility = ["//visibility:public"])

compile_pip_requirements(
    name = "requirements",
    src = "requirements.in",
    requirements_txt = "requirements.lock.txt",
)

# Format all Bazel files in the repository
bazel_files_format(name = "format")

# Test that all Bazel files are properly formatted
bazel_files_format_test(
    name = "format_test",
)

# Test suite for validation
test_suite(
    name = "validation_tests",
    tests = [
        ":format_test",
        "//.agents/claude:claude_settings_schema_test",
    ],
)
