module(
    name = "dotfiles",
    version = "1.0",
)

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "protobuf", version = "33.4")
bazel_dep(name = "aspect_rules_lint", version = "2.3.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.1")
bazel_dep(name = "rules_multitool", version = "1.11.1")

# Gazelle
bazel_dep(name = "rules_go", version = "0.60.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.47.0", repo_name = "bazel_gazelle")
bazel_dep(name = "rules_python_gazelle_plugin", version = "1.6.3")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = "3.14",
)
use_repo(python, "python_3_14")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    environment = {
        "PYO3_USE_ABI3_FORWARD_COMPATIBILITY": "1",
        "WHENEVER_NO_BUILD_RUST_EXT": "1",
    },
    hub_name = "pypi",
    python_version = "3.14",
    requirements_lock = "//:requirements.lock.txt",
)
use_repo(pip, "pypi")

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//tools:multitool.lock.json")
use_repo(multitool, "multitool")

# Register toolchains

# External dependencies
tmux = use_extension("//tools/tmux:extensions.bzl", "tmux")
tmux.toolchain(version = "3.6")
use_repo(tmux, "tmux")

ruff = use_extension("//tools/lint:extensions.bzl", "ruff")
ruff.toolchain(version = "0.15.7")
use_repo(ruff, "ruff")
