module(
    name = "dotfiles",
    version = "1.0",
)

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "protobuf", version = "33.4")
bazel_dep(name = "aspect_rules_lint", version = "2.3.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.1")
bazel_dep(name = "rules_multitool", version = "1.11.1")

# Gazelle
bazel_dep(name = "rules_go", version = "0.60.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.47.0", repo_name = "bazel_gazelle")
bazel_dep(name = "rules_python_gazelle_plugin", version = "1.6.3")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = "3.14",
)
use_repo(python, "python_3_14")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    environment = {
        "PYO3_USE_ABI3_FORWARD_COMPATIBILITY": "1",
        "WHENEVER_NO_BUILD_RUST_EXT": "1",
    },
    hub_name = "pypi",
    python_version = "3.14",
    requirements_lock = "//:requirements.lock.txt",
)
use_repo(pip, "pypi")

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//tools:multitool.lock.json")
use_repo(multitool, "multitool")

# Register toolchains

# External dependencies
tmux = use_extension("//tools/tmux:extensions.bzl", "tmux")
tmux.toolchain(version = "3.6")
use_repo(tmux, "tmux")

ruff = use_extension("//tools/lint:extensions.bzl", "ruff")
ruff.toolchain(version = "0.15.7")
use_repo(ruff, "ruff")

bazel_dep(name = "tar.bzl", version = "0.9.0")

ai_skills = use_extension("//tools/agentskills:extensions.bzl", "ai_skills")
ai_skills.gemini_extension(
    name = "gemini_conductor",
    github = "gemini-cli-extensions/conductor",
    sha256 = "701f09ab6a2f13edf384ef6171d79b67e4b4692d3fa2a81035a6b72439129d1a",
    tag = "conductor-v0.4.1",
)
ai_skills.anthropics_skills(
    name = "anthropics_skills",
    commit = "98669c11ca63e9c81c11501e1437e5c47b556621",
    github = "anthropics/skills",
    sha256 = "435b687005b44bbc70c1c95e4362532987fe06547f6740ceba05fbdcc200aac3",
)
ai_skills.skill_collection(
    name = "gstack",
    commit = "6169273d16b7ab8690943241fa802e5a1ca85305",
    exclude = [
        "browse",  # requires building a TypeScript/Bun browser-automation server
        "codex",  # OpenAI Codex-specific workflow
        "connect-chrome",  # browser infrastructure dependency
        "gstack-upgrade",  # meta-skill for upgrading gstack itself
        "office-hours",  # not generally applicable
        "plan-ceo-review",  # org-specific planning ritual
        "plan-design-review",  # org-specific planning ritual
        "plan-eng-review",  # org-specific planning ritual
        "setup-browser-cookies",  # browser infrastructure dependency
        "setup-deploy",  # org-specific deployment setup
    ],
    github = "garrytan/gstack",
    namespace = "gstack",
    sha256 = "1de01e5d0d187f2a86ed65355d4148a138af409bcc6b949a5f85203fec6005fa",
)
ai_skills.claude_agents(
    name = "agency_agents",
    commit = "4feb0cd736dd0e2e9830cd54dfc99770621bed90",
    github = "msitarzewski/agency-agents",
    sha256 = "befd4ab2dafea1cf3c2e5a7737854b1921158211ff164bd7a034a18a963e0231",
)
ai_skills.claude_plugin(
    name = "compound_engineering",
    github = "EveryInc/compound-engineering-plugin",
    plugin_path = "plugins/compound-engineering",
    sha256 = "ef6cd6e3dea900f355dd248b6f0db74ebb8eb4d323de3228cf15c21c6b1b8f81",
    tag = "compound-engineering-v2.62.0",
)
use_repo(ai_skills, "agency_agents", "anthropics_skills", "compound_engineering", "gemini_conductor", "gstack")
