[project]
name = "dotfiles"
version = "0.0.0"
requires-python = ">=3.14"
dependencies = [
    "termbud",
    "jules-cli",
    "transcribe",
    "claude-statusline",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "ruff>=0.15.9",
    "ty>=0.0.29",
    "pytest-testinfra>=10",
    "pytest-cov>=7.1.0",
]

[tool.uv.workspace]
members = [
    "src/python/termbud",
    "src/python/jules_cli",
    "src/python/claude_statusline",
    "src/python/transcribe",
]

[tool.uv.sources]
termbud = { workspace = true }
jules-cli = { workspace = true }
transcribe = { workspace = true }
claude-statusline = { workspace = true }

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "C90", # mccabe
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RET", # flake8-return
    "PIE", # flake8-pie
    "ISC", # flake8-implicit-str-concat
    "RUF", # Ruff-specific rules
    "PL",  # Pylint
    "PERF",# Perflint
]
ignore = [
    "UP043", # Unnecessary default type arguments
    "PLR2004", # Magic value used in comparison
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments
    "PLR0915", # Too many statements
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
known-first-party = ["termbud", "jules_cli", "claude_statusline", "transcribe"]

[tool.ty.src]
include = [
    "src/python",
    "src/chezmoi",
    ".claude/hooks",
]

[tool.ty.rules]
all = "error"

[tool.pytest.ini_options]
asyncio_mode = "auto"
