[project]
name = "dotfiles"
version = "0.0.0"
requires-python = ">=3.14"
dependencies = [
    "termbud",
    "jules-cli",
    "transcribe",
    "termtext",
    "claude-statusline",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "ruff>=0.15.9",
    "ty>=0.0.29",
    "pytest-testinfra>=10",
    "pytest-cov>=7.1.0",
]

[tool.uv.workspace]
members = [
    "src/python/termbud",
    "src/python/jules_cli",
    "src/python/claude_statusline",
    "src/python/transcribe",
    "src/python/termtext",
]

[tool.uv.sources]
termbud = { workspace = true }
jules-cli = { workspace = true }
transcribe = { workspace = true }
termtext = { workspace = true }
claude-statusline = { workspace = true }

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "C90", # mccabe
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RET", # flake8-return
    "PIE", # flake8-pie
    "ISC", # flake8-implicit-str-concat
    "RUF", # Ruff-specific rules
    "PL",  # Pylint
    "PERF", # Perflint
    "TID", # flake8-tidy-imports
    "PYI", # flake8-pyi
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "TD",  # flake8-todos
    "S",   # flake8-bandit
    "ANN", # flake8-annotations
    "D",   # pydocstyle
]

ignore = [
    "UP043", # Unnecessary default type arguments
    "PLR2004", # Magic value used in comparison
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments
    "PLR0915", # Too many statements
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in __init__
    "D203",  # 1 blank line required before class docstring
    "D212",  # Multi-line docstring summary should start at the first line
    "ANN002", # Missing type annotation for *args
    "ANN003", # Missing type annotation for **kwargs
    "S101",  # Use of `assert` detected
    "S105",  # Possible hardcoded password
    "TD002", # Missing author in TODO
    "TD003", # Missing issue link on the line following this TODO
    "TD004", # Missing colon in TODO
    "PTH123", # `open()` should be replaced by `Path.open()`
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D106",  # Missing docstring in public nested class
    "D200",  # One-line docstring should fit on one line
    "S603",  # subprocess untrusted
    "S607",  # subprocess partial path
    "S701",  # jinja2 autoescape
    "ANN201", # missing return type public function
    "ANN202", # missing return type private function
    "ANN204", # missing return type special method
    "ANN401", # Any disallowed
    "ANN001", # missing type annotation for function argument
    "PTH107", # os.remove
    "PTH110", # os.path.exists
    "PTH118", # os.path.join

    "ARG001", # Unused function argument
    "D205",  # 1 blank line required between summary line and description
    "D417",  # Missing argument descriptions in the docstring
    "PTH109", # os.getcwd
    "PTH111", # os.path.expanduser
    "E501",  # Line too long
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
known-first-party = ["termbud", "jules_cli", "claude_statusline", "transcribe", "termtext"]

[tool.ty.src]
include = [
    "src/python",
    "src/chezmoi",
    ".claude/hooks",
]

[tool.ty.rules]
all = "error"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "ANN", "ARG", "S", "PTH"]
"src/**/tests/**/*.py" = ["D", "ANN", "ARG", "S", "PTH"]
"src/**/conftest.py" = ["D", "ANN", "ARG", "S", "PTH"]
