"""
AI Agent Documentation Validation

This package validates agent configuration files to ensure:
- Markdown files are properly formatted (no trailing newlines)
- JSON files are valid and conform to expected schemas
- Documentation files maintain consistency
"""

load("//rules:validation.bzl", "claude_hooks_schema_test", "json_validation_test", "markdown_validation_test")

package(default_visibility = ["//visibility:public"])

# Collect all markdown files for validation
filegroup(
    name = "markdown_files",
    srcs = glob([
        "**/*.md",
    ]),
)

# Collect all JSON files for validation
filegroup(
    name = "json_files",
    srcs = glob([
        "**/*.json",
    ]),
)

# Test that markdown files are properly formatted
markdown_validation_test(
    name = "markdown_validation_test",
    srcs = [":markdown_files"],
)

# Test that JSON files are valid and well-formed
json_validation_test(
    name = "json_validation_test",
    srcs = [":json_files"],
)

# Test that Claude hooks JSON conforms to expected schema
claude_hooks_schema_test(
    name = "claude_hooks_schema_test",
    srcs = ["claude/claude_hooks.json"],
)

# Test suite for all agent validations
test_suite(
    name = "test",
    tests = [
        ":claude_hooks_schema_test",
        ":json_validation_test",
        ":markdown_validation_test",
    ],
)
