"""
AI Agent documentation validation

This package validates agent configuration files to ensure:
- Markdown files are properly formatted
- JSON files are valid and conform to expected schemas
- Documentation files maintain consistency
"""

load("//rules:validation.bzl", "claude_hooks_schema_test")

package(default_visibility = ["//visibility:public"])

# Collect all markdown files for validation
filegroup(
    name = "markdown_files",
    srcs = glob(
        [
            "**/*.md",
        ],
        allow_empty = True,
    ),
)

# TODO: Re-enable markdown validation with better cross-platform support and clearer error reporting
# markdown_validation_test(
#     name = "markdown_validation_test",
#     srcs = [":markdown_files"],
# )

# Test that Claude hooks JSON conforms to expected schema
claude_hooks_schema_test(
    name = "claude_hooks_schema_test",
    srcs = ["//.agents/claude:claude_hooks.json"],
)

# Test suite for all agent validations
test_suite(
    name = "test",
    tests = [
        ":claude_hooks_schema_test",
        # ":markdown_validation_test",  # TODO: Re-enable with better cross-platform support
    ],
)
