load("//tools:validation.bzl", "claude_hooks_schema_test")

package(default_visibility = ["//visibility:public"])

# Test that Claude hooks JSON conforms to expected schema
claude_hooks_schema_test(
    name = "claude_hooks_schema_test",
    srcs = ["claude_hooks.json"],
)

# Export schema file for use by other packages
exports_files([
    "claude-settings-schema.json",
    "claude_hooks.json",
])
