load("@bazel_skylib//rules:common_settings.bzl", "string_flag")

package(default_visibility = ["//visibility:public"])

string_flag(
    name = "profile",
    build_setting_default = "unspecified",
    values = [
        "unspecified",
        "personal",
        "work",
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "unspecified",
    flag_values = {
        ":profile": "unspecified",
    },
    visibility = ["//visibility:public"],
)

config_setting(
    name = "personal",
    flag_values = {
        ":profile": "personal",
    },
    visibility = ["//visibility:public"],
)

config_setting(
    name = "work",
    flag_values = {
        ":profile": "work",
    },
    visibility = ["//visibility:public"],
)


platform(
    name = "linux",
    constraint_values = ["@platforms//os:linux"],
    visibility = ["//visibility:public"],
)

platform(
    name = "macos",
    constraint_values = ["@platforms//os:macos"],
    visibility = ["//visibility:public"],
)

platform(
    name = "windows",
    constraint_values = ["@platforms//os:windows"],
    visibility = ["//visibility:public"],
)
