load("@rules_python//python:defs.bzl", "py_binary")

package(default_visibility = ["//visibility:public"])

# Export linting and LSP related files
exports_files([
    "linting.bzl",
    "lsp.bzl",
    # Python tooling files
    "python_aspects.bzl",
    "simple_per_target_python.bzl",
    "per_target_python.bzl",
    "python_check_wrapper.sh",
    "simple_shell_test.sh",
    # Python test scripts
    "ruff_format_test.py",
    "ruff_check_test.py",
    "mypy_test.py",
    # Legacy (to be removed)
    "python_wrappers.py",
])

# Ruff executable wrapper
py_binary(
    name = "ruff",
    srcs = [":ruff_wrapper.py"],
    main = ":ruff_wrapper.py",
    deps = ["@pypi//ruff"],
)

# Mypy executable wrapper
py_binary(
    name = "mypy",
    srcs = [":mypy_wrapper.py"],
    main = ":mypy_wrapper.py",
    deps = ["@pypi//mypy"],
)
