# Platform selectors for Bazel

package(default_visibility = ["//visibility:public"])

config_setting(
    name = "macos",
    constraint_values = ["@platforms//os:macos"],
)

config_setting(
    name = "linux",
    constraint_values = ["@platforms//os:linux"],
)

config_setting(
    name = "windows",
    constraint_values = ["@platforms//os:windows"],
)

# WSL detection is trickier, but we can approximate with a custom flag
config_setting(
    name = "wsl",
    # In a real setting, you'd detect this with a more sophisticated check
    define_values = {"WSL": "1"},
)

# Custom architecture settings
config_setting(
    name = "arm64",
    constraint_values = ["@platforms//cpu:arm64"],
)

config_setting(
    name = "x86_64",
    constraint_values = ["@platforms//cpu:x86_64"],
)