# -*- Starlark -*-

"""
BUILD file for the `chezmoi` source directory.
"""

package(default_visibility = ["//visibility:public"])

# This filegroup includes all files in the `src` directory,
# allowing them to be used as a hermetic dependency in Bazel rules.
filegroup(
    name = "all_files",
    srcs = glob(["**/*"]),
)